# coldMailAI

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/routers/: contacts.py  emails.py  settings.py
backend/app/services/: company_research.py  gemini.py  gmail.py  peerpush_drafts.py
backend/scripts/: generate_peerpush_drafts.py
backend/tests/: test_contacts_bulk_delete.py  test_email_drafts.py  test_peerpush_drafts.py
docs/superpowers/plans/: 2026-05-12-bulk-contact-deletion.md
docs/superpowers/specs/: 2026-05-12-bulk-contact-deletion-design.md
frontend/: next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compose/: page.tsx
frontend/src/app/contacts/: page.tsx
frontend/src/app/drafts/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/lib/: api.ts
