[tool.poetry]
name = "cold-email-ai-backend"
version = "0.1.0"
description = "Cold Email AI Backend - FastAPI + Gemini"
authors = ["Developer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
google-generativeai = "^0.3.2"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
